# cubesystem

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  GUIDE.md  Makefile  PRIME.md  README.md  setup.sh  themasteros.md  운영매뉴얼.md
.claude/: settings.json  settings.local.json
MEMORY/: DECISION_LOG.md  MEMORY.md
the-master-os/apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.celery  celery_worker.py  pyproject.toml  start_worker.py
the-master-os/apps/api/app/: config.py  main.py
the-master-os/apps/api/app/billing/: __init__.py  cost_calculator.py  credits.py
the-master-os/apps/api/app/llm/: client.py  prompt_builder.py
the-master-os/apps/api/app/mcp/: __init__.py  base.py  firecrawl.py  gdrive_folder_policy.py  google_drive.py  paddleocr.py  registry.py  resend.py  slack.py
the-master-os/apps/api/app/middleware/: audit_logger.py  auth.py  rate_limiter.py  security_headers.py  ssrf_guard.py
the-master-os/apps/api/app/pipeline/: __init__.py  engine.py  graph_builder.py  node_handlers.py  state.py
the-master-os/apps/api/app/routers/: agent_execute.py  agents.py  auto_healing.py  business_plans.py  debates.py  document_validation.py  grant_factory.py  health.py  marketing.py  mcp_hub.py  pipelines.py
the-master-os/apps/api/app/scheduler/: __init__.py  health_monitor.py  vault_rotation.py
the-master-os/apps/api/app/schemas/: agents.py  common.py  pipelines.py
the-master-os/apps/api/app/security/: __init__.py  vault.py
the-master-os/apps/api/app/services/: __init__.py  agent_metrics.py  scheduler.py
the-master-os/apps/api/app/worker/: __init__.py  config.py  tasks.py
the-master-os/apps/api/app/ws/: __init__.py  connection_manager.py  execution_ws.py
the-master-os/apps/api/tests/: conftest.py  test_gdrive_folder_policy.py  test_marketing_router.py  test_mcp_resend.py  test_scheduler.py
(+353 files in other folders)
